[gd_scene load_steps=6 format=2]

[ext_resource path="res://game2.gd" type="Script" id=1]
[ext_resource path="res://resource/bg.png" type="Texture" id=2]
[ext_resource path="res://resource/Unique.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[node name="game2" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 599.985, 351.669 )
scale = Vector2( 1.49982, 1.1743 )
texture = ExtResource( 2 )

[node name="balance" type="Label" parent="."]
margin_left = 781.0
margin_top = 61.0
margin_right = 886.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 1 )
text = "bal"

[node name="timer" type="Label" parent="."]
margin_left = 453.805
margin_top = 72.2531
margin_right = 515.805
margin_bottom = 136.253
custom_fonts/font = SubResource( 1 )
text = "60"

[node name="pussy" type="Label" parent="."]
margin_left = 78.1293
margin_top = 66.7012
margin_right = 202.129
margin_bottom = 130.701
custom_fonts/font = SubResource( 1 )
text = "pussy"

[node name="dealer_hand" type="Label" parent="."]
margin_left = 89.0
margin_top = 194.0
margin_right = 818.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 1 )
text = "dealer hand"

[node name="player_hand" type="Label" parent="."]
margin_left = 87.0
margin_top = 317.0
margin_right = 815.0
margin_bottom = 381.0
custom_fonts/font = SubResource( 1 )
text = "player hand"

[node name="exit" type="Button" parent="."]
margin_left = 995.633
margin_top = 66.6223
margin_right = 1122.63
margin_bottom = 158.622
custom_fonts/font = SubResource( 2 )
text = "X"

[node name="restart" type="Button" parent="."]
margin_left = 92.5309
margin_top = 484.862
margin_right = 219.531
margin_bottom = 576.862
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="hit" type="Button" parent="."]
margin_left = 408.987
margin_top = 483.012
margin_right = 571.987
margin_bottom = 575.012
custom_fonts/font = SubResource( 2 )
text = "Hit"

[node name="stand" type="Button" parent="."]
margin_left = 688.43
margin_top = 483.012
margin_right = 851.43
margin_bottom = 575.012
custom_fonts/font = SubResource( 2 )
text = "Stand"

[node name="bet" type="Button" parent="."]
margin_left = 931.542
margin_top = 480.74
margin_right = 1094.54
margin_bottom = 572.74
custom_fonts/font = SubResource( 2 )
text = "Bet"

[node name="betnum" type="LineEdit" parent="."]
margin_left = 887.0
margin_top = 255.0
margin_right = 1113.0
margin_bottom = 368.0

[node name="game-time" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="debug" type="Sprite" parent="."]
position = Vector2( 599.985, 351.669 )
scale = Vector2( 1.49982, 1.1743 )
texture = ExtResource( 2 )

[node name="txt" type="ScrollContainer" parent="debug"]
margin_left = -371.0
margin_top = -277.0
margin_right = 368.0
margin_bottom = 257.0
scroll_horizontal_enabled = false

[node name="txt" type="Label" parent="debug/txt"]
margin_right = 1.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
autowrap = true
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="stand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="bet" to="." method="_on_bet_pressed"]
[connection signal="timeout" from="game-time" to="." method="_on_gametime_timeout"]
